Fix: Add cd patch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,5 +33,6 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.DEPLOY_KEY }}
           script: |
+            cd /root/runtangr/hexo/
             docker-compose -f docker-compose-nginx.yaml build
             docker-compose -f docker-compose-nginx.yaml up -d
