--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,6 +1,22 @@
+FROM node:8.9.2 AS build-env
+
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+RUN mkdir /web-blog
+COPY . /web-blog
+WORKDIR /web-blog
+
+RUN npm install hexo-abbrlink --save
+RUN npm install -g hexo-cli
+RUN npm install hexo-generator-searchdb
+RUN npm install
+RUN hexo clean && hexo g
+
+
 FROM nginx:1.17
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 WORKDIR /usr/share/nginx/html
-COPY  ./public /usr/share/nginx/html
+COPY --from=build-env /web-blog/public /usr/share/nginx/html
 EXPOSE 80
