--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,5 +34,6 @@ jobs:
           key: ${{ secrets.DEPLOY_KEY }}
           script: |
             cd /root/runtangr/hexo/
+            docker-compose -f docker-compose-nginx.yaml down
             docker-compose -f docker-compose-nginx.yaml build
             docker-compose -f docker-compose-nginx.yaml up -d
