--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -7,6 +7,7 @@ RUN mkdir /web-blog
 COPY . /web-blog
 WORKDIR /web-blog
 
+RUN npm cache verify
 RUN npm install hexo-abbrlink --save
 RUN npm install -g hexo-cli@3.1.0
 RUN npm install hexo-generator-searchdb
