--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://www.runtangr.top
-root: /
+url: runtangr.github.io/blog
+root: /blog/
 ## permalink: :year/:month/:day/:title/
 permalink: post/:abbrlink.html
 abbrlink:
@@ -85,6 +85,6 @@ theme: jekyll-theme-cayman
 deploy:
   type: 'git'
   repo: 
-    github: https://github.com/runtangr/runtangr.github.io.git
-  branch: master
+    github: https://github.com/runtangr/blog.git
+  branch: gh-pages
 
