--- a/_config.yml
+++ b/_config.yml
@@ -85,6 +85,6 @@ theme: jekyll-theme-cayman
 deploy:
   type: 'git'
   repo: 
-    github: https://github.com/runtangr/blog.git
+    github: git@github.com:runtangr/blog.git
   branch: gh-pages
 
