feat: add more and modify font

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -97,7 +97,7 @@ creative_commons:
 # ---------------------------------------------------------------
 
 # Schemes
-scheme: Muse
+scheme: Pisces
 #scheme: Mist
 #scheme: Pisces
 #scheme: Gemini
