feat: add search

--- a/_config.yml
+++ b/_config.yml
@@ -87,3 +87,10 @@ deploy:
   repo: 
     github: git@github.com:runtangr/blog.git
   branch: gh-pages
+
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
+  
