--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Install dependencies
         run: npm install
         
+      - name: Configure Git user
+        run: |
+          git config --global user.name 'runtangr'
+          git config --global user.email 'runtangrui@gmail.com'
+          
       - name: Generate static files
         run: npx hexo generate
 
