--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,16 +20,19 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-          
+
+      - name: Install Hexo CLI
+        run: npm install -g hexo-cli
+        
       - name: Install dependencies
         run: npm install
           
       - name: Build
-        run: npm run build
+        run: hexo generate
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           token: ${{ secrets.GITHUB_TOKEN }}
-          folder: build
+          folder: public
