--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: runtangr.github.io/blog
-root: /blog/
+url: runtangr.github.io/
+root: /
 ## permalink: :year/:month/:day/:title/
 permalink: post/:abbrlink.html
 abbrlink:
@@ -85,7 +85,7 @@ theme: next
 deploy:
   type: 'git'
   repo: 
-    github: git@github.com:runtangr/blog.git
+    github: git@github.com:runtangr/runtangr.github.io.git
   branch: gh-pages
 
 search:
